@@ -5,6 +5,10 @@ PHP                                                                        NEWS
 - Core:
   . Fixed bug #68370 ("unset($this)" can make the program crash). (Laruence)
 
+- zlib:
+  . Fixed bug #53829 (Compiling PHP with large file support will replace
+    function gzopen by gzopen64) (Sascha Kettler, Matteo)
+
 13 Nov 2014, PHP 5.5.19
 
 - Core:
